...

            <Button
                android:id="@+id/quantity_plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.quantityPlus()}"
                android:text="@string/button_plus"
                app:layout_constraintBottom_toBottomOf="@+id/quantity_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/quantity_text"
                app:layout_constraintTop_toTopOf="@+id/quantity_text" />

...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_component_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> viewModel.saveItem()}"
            app:srcCompat="@drawable/ic_done"
            app:fabSize="normal"
...
